--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -52,12 +52,19 @@ $blueColor:#0066cc;
     width: 100%;
     min-height: 100vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 
     &__block{
-        padding:40px;
+        padding:20px 40px 40px 40px;
         width:100%;
         display: flex;
         flex-direction: column;
     }
+}
+
+.logout {
+    width:100px;
+    margin-top:1%;
+    margin-right:2%;
+    margin-left:auto;
 }
