--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -46,7 +46,7 @@ $color: blue;
 $redColor: #ff4917;
 $blueColor:#0066cc;
 
-.app{
+#app{
     background: white;
 }
 .v-main-wrapper {
@@ -68,8 +68,4 @@ $blueColor:#0066cc;
     margin-top:1%;
     margin-right:2%;
     margin-left:auto;
-}
-
-.card {
-    padding:10px;
 }
